# afirewall

./: .gitattributes  .gitignore  LICENSE  LICENSE-SHORT.txt  LICENSE.md  README.md  afirewall.conf  afirewall_20240921.0.1.orig.tar.gz.delta  afirewall_20240921.0.1.orig.tar.gz.id  afirewall_20240921.0.2.orig.tar.gz.delta  afirewall_20240921.0.2.orig.tar.gz.id  afirewall_20240921.0.3.orig.tar.gz.delta  afirewall_20240921.0.3.orig.tar.gz.id  afirewall_20240921.0.4.orig.tar.gz.delta  afirewall_20240921.0.4.orig.tar.gz.id  hatch.toml  pyproject.toml  requirements.txt
afirewall/: afirewall  afirewall.py
debian/: .gitignore  afirewall.dirs  afirewall.install  afirewall.links  afirewall.lintian-overrides  afirewall.list  afirewall.manpages  afirewall.postinst.debhelper  afirewall.prerm.debhelper  changelog  control  copyright  debhelper-build-stamp  files  rules
debian/afirewall/DEBIAN/: conffiles  control  md5sums  postinst  prerm
debian/patches/: afirewall_20240921.0.4-2.diff.NUuk7v  series
debian/source/: lintian-overrides
debian/tests/: control  testcode.sh
debian/upstream/: metadata
doc/man/: afirewall.8
docs/: Gemfile  _config.yml  about.markdown  index.markdown  index.md
docs/_posts/: 2025-04-27-netfilter-command-line-examples.markdown  2025-04-27-netfilter-priorities-tables-and-counters.markdown
docs/assets/: main.scss
docs/assets/css/: style.scss
src/debian/: changelog  control  files
templates/ipv4/: base.rules
templates/ipv4/inbound/: btc.rules  http.rules  smtp.rules  tor.rules
templates/ipv4/outbound/: btc.rules  dns.rules  http.rules  syslogtls.rules  tor.rules
templates/ipv6/: base.rules
templates/ipv6/inbound/: baculadirector.rules  baculafiledaemon.rules  baculastoragedaemon.rules  btc.rules  http.rules  https.rules  smtp.rules  ssh.rules  syslogtls.rules  tcp2194.rules  tor.rules  udp1514.rules
templates/ipv6/outbound/: baculadirector.rules  baculafiledaemon.rules  baculastoragedaemon.rules  dhcp.rules  https.rules  ssh.rules  (+1 more)
test/: test_afirewall.py
(+20 files in other folders)
